# usefulpy-math

./: README.md  pyproject.toml  setup.cfg
future/Base/: alphabets.py  base.py  rule.py
src/mathematics/: __init__.py
src/mathematics/Algebra/: add.py  expression.py  mul.py  symbol.py
src/mathematics/Base/: alphabets.py  base.py  operations.py  rule.py  rules.py  validation.py
src/mathematics/Logic/: operations.py
src/mathematics/Numbers/: number.py
src/usefulpython_mathematics.egg-info/: PKG-INFO  SOURCES.txt
